# fakemodex

./: CMakeLists.txt  README.md
include/: fakemodex.h  fmod1_codec.h  fmod1_common.h  fmod1_dsp.h  fmod1_dsp_effects.h  fmod1_output.h  fmodfn.inc  fmodpfn.h  fmodwrapper.h
include/fmodex/: fmod.h
src/: channel.c  channelgroup.c  dsp.c  fakemodex.c  fmodwrapper.c  geometry.c  globalmem.c  music.c  network.c  recording.c  reverb.c  sound.c  soundgroup.c  sync.c  system.c  userdata.c
